@@ -1,3 +1,7 @@
+2009-06-22  Oliver Hader  <oliver@typo3.org>
+
+	* Added feature #3386: Integrate helpers to create autoloading registry for TYPO3 4.3 (thanks to Dmitry Dulepov, Martin Kutschker, Sebastian Kurfuerst)
+
 2008-09-12	Dmitry Dulepov	<dmitry@typo3.org>
 
 	* Added "static" declaration parsing to code beautifier
